--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-router": "^4.0.16",
     "vue3-datepicker": "^0.3.4",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
@@ -40,7 +41,10 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars":"off",
+      "vue/multi-word-component-names":"off"
+    }
   },
   "browserslist": [
     "> 1%",
